--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
