--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/bloodbank
 PORT=5000
-JWT_SECRET=your_jwt_secret_key
+MONGO_URI=mongodb+srv://shaheerkhan090909:GFOAZrDBEHswURrf@cluster2.h2dtd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2
+JWT_SECRET=your_jwt_secret_key_here
