--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb+srv://shaheerkhan090909:GFOAZrDBEHswURrf@cluster2.h2dtd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2
-JWT_SECRET=your_jwt_secret_key_here
+JWT_SECRET=BLOOD_BANK
+REACT_APP_API_URL=http://localhost:5000
